--- a/discovery-service.yml
+++ b/discovery-service.yml
@@ -4,6 +4,8 @@ spring:
   
   eureka:
     client:
+      service-url:
+        defaultZone: http://discovery-service:8761/eureka/
       register-with-eureka: false
       fetch-registry: false
     server:
